--- a/.github/workflows/halo.yml
+++ b/.github/workflows/halo.yml
@@ -47,7 +47,7 @@ jobs:
             ${{ runner.os }}-dependencies-
 
       - name: Check And Test
-        run: ./gradlew check
+        run: chmod +x ./gradlew && ./gradlew check
   build:
     runs-on: ubuntu-latest
     needs: check
