--- a/.github/workflows/halo.yml
+++ b/.github/workflows/halo.yml
@@ -13,7 +13,7 @@ on:
       - '!**.md'
   release:
     types: # This configuration does not affect the page_build event above
-      - published
+      - release
       - created
       - edited      
 
