--- a/.github/workflows/halo.yml
+++ b/.github/workflows/halo.yml
@@ -113,7 +113,7 @@ jobs:
         uses: actions/github-script@v2
         if: github.event_name == 'release'
         with:
-          github-token: ${{secrets.GITHUB_TOKEN}}
+          github-token: ${{secrets.DEPLOY_TOKEN}}
           script: |
             console.log('environment', process.versions);
 
