--- a/.github/workflows/halo.yml
+++ b/.github/workflows/halo.yml
@@ -46,7 +46,7 @@ jobs:
             ${{ runner.os }}-dependencies-
 
       - name: Check And Test
-        run: chmod +x ./gradlew && ./gradlew check && echo ${{ github.event_name }}
+        run: chmod +x ./gradlew && ./gradlew check
   build:
     runs-on: ubuntu-latest
     needs: check
@@ -78,7 +78,7 @@ jobs:
             ${{ runner.os }}-dependencies-
 
       - name: Build with Gradle
-        run: ./gradlew clean build -x test
+        run: chmod +x ./gradlew && ./gradlew clean build -x test
 
       - name: Archive halo jar
         uses: actions/upload-artifact@v2
