fix: 优化springboot会打包plain.jar

--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,12 @@ configurations {
 }
 
 
+jar {
+    enabled = true
+    archiveClassifier = '' //use empty string
+}
+
+
 bootJar {
     manifest {
         attributes "Implementation-Title": "Halo Application",
