--- a/.github/workflows/halo.yml
+++ b/.github/workflows/halo.yml
@@ -181,7 +181,7 @@ jobs:
           platforms: ${{ secrets.DOCKER_PLATFORMS }}
           push: true
           tags: |
-            ${{ secrets.DOCKER_IMAGE_NAME }}:${{ env.HALO_VERSION}}
+            ${{ secrets.DOCKER_IMAGE_NAME }}:${{ github.event.release.tag_name }}
       - name: Build and push with latest tag
         uses: docker/build-push-action@v2
         if: "!github.event.release.prerelease"
