--- a/.github/workflows/halo.yml
+++ b/.github/workflows/halo.yml
@@ -161,7 +161,8 @@ jobs:
           chmod +x ./gradlew
           version=$(./gradlew -q projectVersion)
           echo "Trying to build and publish halo:${version}"
-          echo "HALO_VERSION=${version}" >> $GITHUB_ENV
+#          echo "HALO_VERSION=${version}" >> $GITHUB_ENV
+          echo "HALO_VERSION=${{ github.event.release.tag_name }}" >> $GITHUB_ENV
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
